        * Finally trace why replicate acted weird sometimes. If a file was
          deleted while it still had rows in file_to_replicate, those rows
          became stale as they were not removed. Wire up FID::delete to remove
          the rows (not Store::delete_fidid as that is overridden in Postgres).

        * enqueue_fids_to_delete is dangerous when can_insert_multi is true,
          but can_insertignore AND can_replace are false. This is per the
          insert_ignore warning.

        * Include warnings and comments regarding usages of insert_ignore and
          insert_replace.

        * Guard usages of REPLACE when can_replace is false.

        * When croaking due to bogus options, include the keys in the croak
          output for easier tracing.

        * Handle HiRes gettimeofday correctly to get useful results. Arrays are
          important. This gives us correct timing output.

        * Handle input to log() correctly. Based on the implementation of
          Sys::Syslog::syslog(), produces no ugly warnings, and makes sure that
          printf stuff works nicely.

        * Root DSN may need the hostname as well, so pass it in rather than
          leaving it out.

        * Use insert_ignore instead of raw INSERT IGNORE inside Delete worker.

        * The unix_timestamp function belongs to the Store, not other classes.
          Need to add testcases for process_deletes and stats.

        * Using NULL during an INSERT for the AUTO_INCREMENT column does not
          work very well outside of MySQL. Pass the correct number of arguments
          to the INSERT instead.

        * Clean up all raw usages of UNIX_TIMETAMP() function, in preparation
          for database independence. If you need the unix timestamp, include the output
          of $self->unix_timestamp directly into your query.

        * Append the mogstored job type to $0 instead of replacing it entirely.
